# AmrMathMaker

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  run_AmrMathMaker.sh
.github/workflows/: build.yml
gui/: main.tcl
src/: Equation.hpp  HandwritingRenderer.cpp  HandwritingRenderer.hpp  SceneManager.hpp  main.cpp
tcltk/src/tcl9.0.3/unix/: config.status  tcl.pc  tclConfig.sh  tclsh
tcltk/src/tcl9.0.3/unix/libtcl.vfs/tcl_library/: auto.tcl  clock.tcl  cookiejar  encoding  foreachline.tcl  history.tcl  http  icu.tcl  init.tcl  install.tcl  license.terms  msgcat  msgs  opt  package.tcl  parray.tcl  pkgIndex.tcl  platform  readfile.tcl  safe.tcl  tclIndex  tcltest  tm.tcl  tzdata  word.tcl  writefile.tcl
tcltk/src/tcl9.0.3/unix/pkgs/itcl4.3.5/: config.status  itclConfig.sh
tcltk/src/tcl9.0.3/unix/pkgs/sqlite3.51.0/: config.status  pkgIndex.tcl
tcltk/src/tcl9.0.3/unix/pkgs/tdbc1.1.13/: config.status  pkgIndex.tcl  tdbcConfig.sh
tcltk/src/tcl9.0.3/unix/pkgs/tdbcmysql1.1.13/: config.status  tdbcMysqlUuid.h
tcltk/src/tcl9.0.3/unix/pkgs/tdbcodbc1.1.13/: config.status  pkgIndex.tcl  tdbcOdbcUuid.h
tcltk/src/tcl9.0.3/unix/pkgs/tdbcpostgres1.1.13/: config.status
tcltk/src/tcl9.0.3/unix/pkgs/tdbcsqlite3-1.1.13/: config.status
tcltk/src/tcl9.0.3/unix/pkgs/thread3.0.4/: config.status  threadUuid.h
tcltk/src/tcl9.0.3/unix/pkgs8/itcl4.3.5/: config.status  itclConfig.sh  itclUuid.h
tcltk/src/tcl9.0.3/unix/pkgs8/sqlite3.51.0/: config.status  sqlite3Uuid.h
tcltk/src/tcl9.0.3/unix/pkgs8/tdbc1.1.13/: config.status  tdbcConfig.sh  tdbcUuid.h
tcltk/src/tcl9.0.3/unix/pkgs8/tdbcmysql1.1.13/: config.status  pkgIndex.tcl
tcltk/src/tk9.0.3/unix/: config.status  tk.pc  tkConfig.sh  tkUuid.h
(+45 files in other folders)
